Fix label shift when checked

--- a/public/styles.css
+++ b/public/styles.css
@@ -146,6 +146,15 @@ h2 {
 	outline: 5px solid var(--gold);
 }
 
+.input-book label::after {
+	display: block;
+	content: attr(data-text);
+	font-weight: bold;
+	height: 0;
+	overflow: hidden;
+	visibility: hidden;
+}
+
 .input-paragraphs input {
 	transition: box-shadow 0.2s;
 }
